--- a/CSE_425/Lecture_16_26.09.2021.ipynb
+++ b/CSE_425/Lecture_16_26.09.2021.ipynb
@@ -54,7 +54,9 @@
   {
    "cell_type": "markdown",
    "id": "5fb835e0-9169-4aea-8ecc-42b27cae73b8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Liang Barsky Algo"
    ]
@@ -95,7 +97,9 @@
   {
    "cell_type": "markdown",
    "id": "9e9bf33e-25f8-4741-a875-79b9bab5b25e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Sultherland-Hodgman Algo"
    ]
