--- a/CSE_429/Lecture_4_02.08.2021.ipynb
+++ b/CSE_429/Lecture_4_02.08.2021.ipynb
@@ -16,6 +16,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"https://drive.google.com/file/d/1_M631NmxTEDHrgUajqf5Zwcbd8rZ9Fuy/preview\" width=\"640\" height=\"480\" allow=\"autoplay\"></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<iframe src=\"https://drive.google.com/file/d/1_M631NmxTEDHrgUajqf5Zwcbd8rZ9Fuy/preview\" width=\"640\" height=\"480\" allow=\"autoplay\"></iframe>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
